# ProtonPlus

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .vala-lint.conf  .valalintignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  com.vysp3r.ProtonPlus.json  com.vysp3r.ProtonPlus.json~  com.vysp3r.ProtonPlus.local.yml  com.vysp3r.ProtonPlus.yml  index.html  meson.build  runners.json  style.css  vala-lint.conf
data/: com.vysp3r.ProtonPlus.appdata.xml  com.vysp3r.ProtonPlus.appdata.xml.in  com.vysp3r.ProtonPlus.desktop  com.vysp3r.ProtonPlus.desktop.in  com.vysp3r.ProtonPlus.gresource.xml  com.vysp3r.ProtonPlus.gschema.xml  com.vysp3r.ProtonPlus.metainfo.xml.in  com.vysp3r.ProtonPlus.service  com.vysp3r.ProtonPlus.timer  meson.build  runners.json
data/css/: application.css  css.gresource.xml  meson.build  style.css
data/icons/: icons.gresource.xml  meson.build
data/images/: images.gresource.xml  meson.build
data/logo/: ProtonPlus.xcf
data/previews/: Preview-Video.webm
data/ui/: meson.build  ui.gresource.xml
src/: Application.vala  Config.vapi  Main.vala  application.vala  config.vapi  constants.vala.in  globals.vala  globals.vapi  main.vala  meson.build  protonplus.gresource.xml  return-code.vala  return_codes.vala  translatables.vala  window.vala
src/Interfaces/: IModel.vala  IView.vala
src/Models/: Launcher.vala  Preference.vala  Release.vala  Tool.vala
src/Models/Preferences/: Steam.vala  Style.vala
src/Models/preferences/: Style.vala
src/Stores/: Main.vala  Preferences.vala  Threads.vala
src/Utils/: Constants.vala.in  Dir.vala  File.vala  Filesystem.vala  Preference.vala  Theme.vala  Web.vala
src/Utils/VDF/: Binary.vala  Node.vala  Shortcut.vala
src/Views/: Notifications.vala  Tools.vala
src/Widgets/: ProtonActionRow.vala  ProtonComboRow.vala  ProtonMessageDialog.vala
src/Windows/: About.vala  Home.vala  InstallTool.vala  Installer.vala  LauncherSettings.vala  Main.vala  Preferences.vala  ViewManager.vala
src/Windows/Errors/: GithubApiRequest.vala
src/Windows/Games/: Main.vala
src/Windows/Notifications/: Main.vala
src/Windows/Preferences/: Main.vala
src/Windows/Tools/: LauncherInfo.vala  LauncherSelector.vala  ReleaseInfo.vala  ReleaseInstaller.vala  ToolInfo.vala
src/Windows/Views/: Games.vala  Notifications.vala  Tools.vala
src/cli/: cli.vala  meson.build
src/gtk/: help-overlay.ui
src/interfaces/: IModel.vala
src/launcher/: launcher-info-box.vala  launcher-list-box.vala  launcher-warning-box.vala  launcher-window.vala  meson.build
src/launchers/: bottles.vala  hgl.vala  lutris.vala  steam.vala
src/manager/: File.vala  Preference.vala  Theme.vala  Web.vala  file.vala  http.vala  preferences.vala  themes.vala
src/menu/: menu-box.vala  meson.build
src/models/: Launcher.vala  Release.vala  Tool.vala  compatibilitytool.vala  download-manager.vala  game.vala  group.vala  launcher.vala  location.vala  mangohud-config.vala  meson.build  parameters.vala  preference.vala  release.vala  runner.vala  simple-runner.vala  steam-profile.vala  tool.vala  variant.vala
src/models/games/: meson.build  steam.vala
src/models/internal/: meson.build  metainfo.vala
src/models/launchers/: bottles.vala  hgl.vala  lutris.vala  meson.build  steam.vala  winezgui.vala
src/models/preferences/: style.vala
src/models/releases/: basic.vala  github-action.vala  history.vala  latest.vala  meson.build  steamtinkerlaunch.vala  update.vala  upgrade.vala
src/models/runners/: basic.vala  boxtron.vala  dxvk-async-gnusenpai.vala  dxvk-async-sarek.vala  dxvk-async-sporif.vala  dxvk-doitsujin.vala  dxvk-gpl-async-ph42on.vala  dxvk-sarek.vala  forgejo.vala  github-action.vala  github.vala  gitlab.vala  installed.vala  kron4ek-proton-builds.vala  kron4ek-wine-builds-staging-tkg.vala  kron4ek-wine-builds-staging.vala  kron4ek-wine-builds-vanilla.vala  luxtorpeda.vala  northstar-proton.vala  (+14 more)
src/preferences/: meson.build  preferences-window.vala
src/releases/: steamtinkerlaunch.vala  stl_release.vala
src/runners/: basic.vala  boxtron.vala  dxvk-async-gnusenpai.vala  dxvk-async-sporif.vala  dxvk-doitsujin.vala  dxvk-gpl-async-ph42on.vala  github-action.vala  github.vala  gitlab.vala  kron4ek-wine-builds-staging-tkg.vala  kron4ek-wine-builds-staging.vala  kron4ek-wine-builds-vanilla.vala  luxtorpeda.vala  northstar-proton.vala  other.vala  proton-ge-rstp.vala  proton-ge.vala  proton-tkg.vala  roberta.vala  steamtinkerlaunch.vala  vkd3d-lutris.vala  vkd3d-proton.vala  wine-ge.vala  wine-lutris.vala
src/shared/: Constants.vala.in  meson.build
src/stores/: preferences.vala  threads.vala
src/utils/: cache-manager.vala  controller-manager.vala  download-manager.vala  filesystem.vala  gui.vala  i18n.vala  mangohud-manager.vala  meson.build  optiscaler-manager.vala  parser.vala  system.vala  theme-manager.vala  web.vala
src/vdf/: binary.vala  meson.build  node.vala  shortcut.vala
src/views/: Games.vala  Tools.vala  games.vala  notifications.vala  other.vala  tools.vala
src/widgets/: ProtonComboRow.vala  ProtonMessageDialog.vala  application.vala  busy-dialog.vala  circular-progress-bar.vala  controller-manager.vala  description-dialog.vala  dialog.vala  error-dialog.vala  game-row.vala  info-box.vala  install-dialog.vala  launcher-box.vala  library-box.vala  library-dialog.vala  load-more-row.vala  mass-edit-dialog.vala  meson.build  protoncb.vala  protonrow.vala  release-row-button.vala  release-row.vala  remove-dialog.vala  runner-group.vala  runner-row.vala  scroll-controller.vala  shortcut-button.vala  sidebar-row.vala  sidebar.vala  status-box.vala  theme-manager.vala  update-button.vala  upgrade-dialog.vala  warning-dialog.vala  window.vala
src/windows/: AboutTool.vala  Home.vala  HomeInfo.vala  InstallTool.vala  LauncherSettings.vala  Preferences.vala  Selector.vala  home.vala  home_custom_directory.vala  home_info.vala  preferences.vala  selector.vala
tests/: base.vala  example_test.vala  main.vala  meson.build
tests/models/: launcher_test.vala  meson.build  runners.v2.json
(+362 files in other folders)
