sources += files(
    'application.vala',
    'theme-manager.vala',
    'status-box.vala',
    'window.vala',
    'scroll-controller.vala',
    'error-dialog.vala',
    'warning-dialog.vala',
)

subdir('preferences')
subdir('launchers-popover')
subdir('runners')
subdir('downloads')
subdir('games')
subdir('mangohud')
