sources += files(
    'launch-option-amd-icd.vala',
    'launch-option-binding.vala',
    'launch-option-custom-pairs.vala',
    'launch-option-dll-overrides.vala',
    'launch-option-entry-field.vala',
    'launch-option-preview-field.vala',
    'launch-option-radv-debug.vala',
    'launch-option-radv-perf-test.vala',
    'launch-option-resolution-choice.vala',
    'launch-option-resolution-field.vala',
    'launch-option-spin-tile.vala',
    'launch-option-tile.vala',
)
