sources += files(
    'games-box.vala',
    'switch-profile-button.vala',
    'game-row.vala',
    'extra-button.vala',
    'mass-edit-view.vala',
    'mass-edit-button.vala',
    'shortcut-button.vala',
    'launch-options-editor.vala',
    'profile-dialog.vala',
    'profile-button.vala',
    'compatibility-tool-row.vala',
)
