sources += files(
    'games-box.vala',
    'games-switch-profile-button.vala',
    'games-row.vala',
    'games-extra-button.vala',
    'games-mass-edit-view.vala',
    'games-mass-edit-button.vala',
    'games-shortcut-button.vala',
    'games-launch-options-editor.vala',
    'games-profile-dialog.vala',
    'games-profile-button.vala',
    'games-tool-row.vala',
)
