sources += files(
    'release-row.vala',
    'load-more-row.vala',
    'runner-group.vala',
    'runner-row.vala',
    'description-dialog.vala',
    'remove-dialog.vala',
    'steamtinkerlaunch-row.vala',
    'basic-row.vala',
    'installed-row.vala',
    'runners-box.vala',
    'filters-box.vala',
)
