sources += files(
    'launch-options-editor-custom-expander-row.vala',
    'launch-options-editor-amd-icd.vala',
    'launch-options-editor-binding.vala',
    'launch-options-editor-custom-pairs.vala',
    'launch-options-editor-dll-overrides.vala',
    'launch-options-editor-entry-field.vala',
    'launch-options-editor-preview-field.vala',
    'launch-options-editor-radv-debug.vala',
    'launch-options-editor-radv-perf-test.vala',
    'launch-options-editor-resolution-choice.vala',
    'launch-options-editor-resolution-field.vala',
    'launch-options-editor-spin-tile.vala',
    'launch-options-editor-tile.vala',
    'launch-options-editor-box.vala',
)
