sources += files(
    'audio-options-group.vala',
    'base-options-group.vala',
    'common-options-group.vala',
    'dxvk-options-group.vala',
    'gpu-vendor-amd-options-group.vala',
    'gpu-vendor-intel-options-group.vala',
    'gpu-vendor-nvidia-options-group.vala',
    'gpu-vendor-options-group.vala',
    'more-options-group.vala',
    'proton-options-group.vala',
    'vkd3d-options-group.vala'
)